@@ -32,6 +32,7 @@ Version 1.4.12 - SVN
   - Fix bug in sitewide SMTP settings still using authenticated user, rather
     than configured settings (#1835942).
   - Fixed mailto: functionality.
+  - Added mailto: link handling when viewing messages.
 
 Version 1.4.11 - 29 September 2007
 ----------------------------------
